--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,10 +8,52 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.sh.shprojectdemo.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:hint="消息头"
+        />
+    <Button
+        android:id="@+id/one_headle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加一个消息头"/>
+    <Button
+        android:id="@+id/all_headle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加全部消息头"/>
+    <Button
+        android:id="@+id/add_param"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加一个参数"/>
+    <Button
+        android:id="@+id/add_bean"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加一个对象"/>
+    <Button
+        android:id="@+id/add_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加一个集合"/>
+    <Button
+        android:id="@+id/fs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="发送请求"/>
+    <Button
+        android:id="@+id/sx"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="刷新"/>
+    <Button
+        android:id="@+id/qm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="获得签名"/>
+</LinearLayout>
