--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -6,10 +6,16 @@
     android:layout_height="match_parent"
 
     tools:context="com.sh.shprojectdemo.ListViewActivity">
-    <com.jruilibarary.widget.SideslipListView
-        android:id="@+id/listview"
+    <com.jruilibarary.widget.RefreshLayout
+        android:id="@+id/refreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/ui_black"
-        android:dividerHeight="1px"></com.jruilibarary.widget.SideslipListView>
+        android:layout_height="match_parent">
+        <com.jruilibarary.widget.SideslipListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/ui_black"
+            android:dividerHeight="1px"></com.jruilibarary.widget.SideslipListView>
+    </com.jruilibarary.widget.RefreshLayout>
+
 </RelativeLayout>
