--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_list_view"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
 
-    tools:context="com.sh.shprojectdemo.ui.ListViewActivity">
+    tools:context="com.sh.shprojectdemo.ui.UserListActivity">
+    <com.jruilibarary.widget.TemplateTitleBar
+        android:id="@+id/template"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleText="列表"
+        app:canBack="true"
+        app:textColors="@color/white"
+        android:background="@color/colorPrimary"
+        ></com.jruilibarary.widget.TemplateTitleBar>
     <com.jruilibarary.widget.RefreshLayout
+
         android:id="@+id/refreshlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,4 +31,4 @@
             android:dividerHeight="1px"></com.jruilibarary.widget.SideslipListView>
     </com.jruilibarary.widget.RefreshLayout>
 
-</RelativeLayout>
+</LinearLayout>
