增加 版本检查

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="white">#ffffff</color>
     <color name="background_grey">#808080</color>
+    <color name="template_line">#DDDDDD</color>
 </resources>
