--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,11 @@
         <item name="android:textColor">@drawable/bg_radiobutton_selector_home_page</item>
     </style>
 
+
+    <style name="lineFromView" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@color/white</item>
+
+    </style>
 </resources>
