--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,10 +34,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:hint="用户名"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp">
 
         <EditText
+            android:inputType="textCapCharacters"
             android:id="@+id/account"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,13 +54,17 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:hint="密码"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_marginBottom="20dp"
+
       >
 
         <EditText
             android:id="@+id/pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:textColorHint="@color/colorPrimary"
             />
     </android.support.design.widget.TextInputLayout>
