--- a/jr_ui_library/src/main/res/layout/widget_line_from.xml
+++ b/jr_ui_library/src/main/res/layout/widget_line_from.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent" android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="horizontal">
         <TextView
             android:layout_marginTop="2dp"
