--- a/jr_ui_library/src/main/res/layout/widget_search.xml
+++ b/jr_ui_library/src/main/res/layout/widget_search.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:background="@drawable/bg_search_inputbox"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="wrap_content"
