--- a/app/src/main/res/layout/fragment_im.xml
+++ b/app/src/main/res/layout/fragment_im.xml
@@ -2,12 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity=""
     tools:context="com.sh.shprojectdemo.ui.fragment.IMFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/text"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="20dp" />
 
 </FrameLayout>
