--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,6 +76,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <Button
+                android:text="音频录制播放"
+                android:id="@+id/audio_record"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
                 android:text="视频录制压缩"
                 android:id="@+id/video_record"
                 android:layout_marginTop="16dp"
