--- a/jr_ui_library/src/main/res/values/colors.xml
+++ b/jr_ui_library/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="ui_all_translucent">#00ffffff</color>
     <color name="ui_mask">#62000000</color>
     <color name="ui_background_grey">#808080</color>
-
+    <color name="ui_transparent_half">#91000000</color>
     <color name="refresh_icon">#e70012</color>
 
 
