--- a/jr_ui_library/src/main/res/layout/widget_refresh_listview.xml
+++ b/jr_ui_library/src/main/res/layout/widget_refresh_listview.xml
@@ -2,13 +2,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
-
+    <TextView
+        android:visibility="gone"
+        android:gravity="center"
+        android:text="没有数据"
+        android:textSize="20sp"
+        android:id="@+id/no_data"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
    <com.jruilibrary.widget.RefreshLayout
        android:id="@+id/refesh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
-           android:id="@+id/listview"
+           android:id="@+id/refreshLayout_listview"
            android:dividerHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
